# Compiladores

./: .gitignore  CMakeLists.txt  README.md  RESOLVER  Recursao
src/: CMakeLists.txt  lexico.cpp  lexico.h  main.cpp  mainwindow.cpp  mainwindow.h  sintatico.cpp  sintatico.h  token.cpp  token.h
